--- a/HumanResources/ClientApp/src/index.html
+++ b/HumanResources/ClientApp/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <title>HumanResources</title>
+    <title>Human Resources</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root>Proszę czekać...</app-root>
   </body>
 </html>
