Modified a few elements, translating them to polish, disabled SSL and modified employee's module by adding form validation.

--- a/HumanResources/ClientApp/src/index.html
+++ b/HumanResources/ClientApp/src/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root>Proszę czekać...</app-root>
+    <app-root>
+      <h6>Proszę czekać...</h6>
+    </app-root>
   </body>
 </html>
